--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">KotlinFrags</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_first_fragment">Hello from first fragment</string>
+    <string name="next">Next</string>
+    <string name="hello_second_fragment">Hello from second fragment</string>
+    <string name="hello_third_fragment">Hello from third fragment</string>
+    <string name="back">Back</string>
+    <string name="change_title">Change Title</string>
+    <string name="apply">Apply</string>
 </resources>
